--- a/index.html
+++ b/index.html
@@ -4,65 +4,74 @@
     <meta charset="utf-8" />
     <meta name="description" content="Solutions for rise your bussines" />
     <title>Business consulting</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--Custom styles-->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
-  <body>
+  <body class="body" style="font-family: 'Roboto',sans-serif; color: #434455; background-color: var(--main-background-color);">
     <!--page header-->
-    <header>
+    <header class="header section">
       <!--header navigation-->
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="#" target="_blank">Studio</a></li>
-          <li><a href="#" target="_blank">Portfolio</a></li>
-          <li><a href="#" target="_blank">Contacts</a></li>
+      <nav class="header-nav">
+        <a class="logo" href="./index.html"><span class="logo-web-color">Web</span>Studio</a>
+        <ul class="header-list list">
+          <li class="header-item"><a class="header-link link" href="index.html">Studio</a></li>
+          <li class="header-item"><a class="header-link link" href="portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a class="header-link link" href="#" target="_blank">Contacts</a></li>
         </ul>
       </nav>
       <!--header's contacts-->
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-address">
+        <ul class="address-list list">
+          <li class="address-item text"><a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="address-item text"><a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
 
     <!--main content-->
-    <main>
+    <main class="main">
       <!--hero section-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button button" type="button">Order Service</button>
       </section>
 
-      <!--why we are the best? section-->
-      <section>
+      <!--benefits section-->
+      <section class="benefits section">
         <h2 hidden>Advanced</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="benefits-list list">
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle subtitle">Strategy</h3>
+            <p class="benefits-text text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-item"></li>
+            <h3 class="benefits-subtitle subtitle">Punctuality</h3>
+            <p class="benefits-text text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-item"></li>
+            <h3 class="benefits-subtitle subtitle">Diligence</h3>
+            <p class="benefits-text text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-item"></li>
+            <h3 class="benefits-subtitle subtitle">Technologies</h3>
+            <p class="benefits-text text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -70,26 +79,26 @@
         </ul>
       </section>
 
-      <!--What are we doing? section-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img
+      <!--Our knowledges section-->
+      <section class="knowledges-section section">
+        <h2 class="knowledges-title title">What are we doing</h2>
+        <ul class="knowledges-list">
+          <li class="knowledges-list list">
+            <img class="knowledges-img"
               src="./images/main/what-are-we-doing/what-are-we-doing-1.jpg"
               width="360"
               alt="computer"
             />
           </li>
-          <li>
-            <img
+          <li class="knowledges-list list">
+            <img class="knowledges-img"
               src="./images/main/what-are-we-doing/what-are-we-doing-2.jpg"
               width="360"
               alt="phone screen"
             />
           </li>
-          <li>
-            <img
+          <li class="knowledges-list list">
+            <img class="knowledges-img"
               src="./images/main/what-are-we-doing/what-are-we-doing-3.jpg"
               width="360"
               alt="phone"
@@ -99,53 +108,53 @@
       </section>
 
       <!--our team section-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
+      <section class="team-section section">
+        <h2 class="team-title title">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
+            <img class="team-img"
               src="./images/main/our-team/our-team-1.jpg"
               alt="man"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name subtitle">Mark Guerrero</h3>
+            <p class="team-position text">Product Designer</p>
           </li>
-          <li>
-            <img
+          <li class="team-item">
+            <img class="team-img"
               src="./images/main/our-team/our-team-2.jpg"
               alt="man"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name subtitle">Tom Ford</h3>
+            <p class="team-position text">Frontend Developer</p>
           </li>
-          <li>
-            <img
+          <li class="team-item">
+            <img class="team-img"
               src="./images/main/our-team/our-team-3.jpg"
               alt="woman"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name subtitle">Camila Garcia</h3>
+            <p class="team-position text">Marketing</p>
           </li>
-          <li>
-            <img
+          <li class="team-item"> 
+            <img class="team-img"
               src="./images/main/our-team/our-team-4.jpg"
               alt="man"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name subtitle">Daniel Wilson</h3>
+            <p class="team-position text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--page footer-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html"><span class="logo-web-color">Web</span><span class="logo-studio-color">Studio</span></a>
+      <p class="footer-text ">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
