--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!--page header-->
     <header class="header section">
       <!--header navigation-->
+      <a class="logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
       <nav class="header-nav">
-        <a class="logo" href="./index.html"><span class="logo-web-color">Web</span>Studio</a>
         <ul class="header-list list">
           <li class="header-item"><a class="header-link link" href="index.html">Studio</a></li>
           <li class="header-item"><a class="header-link link" href="portfolio.html">Portfolio</a></li>
@@ -153,7 +153,7 @@
 
     <!--page footer-->
     <footer class="footer">
-      <a class="logo" href="./index.html"><span class="logo-web-color">Web</span><span class="logo-studio-color">Studio</span></a>
+      <a class="logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
       <p class="footer-text ">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
