--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--page header-->
     <header class="header section">
       <!--header navigation-->
-      <a class="logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
+      <a class="logo link" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
       <nav class="header-nav">
         <ul class="header-list list">
           <li class="header-item"><a class="header-link link" href="index.html">Studio</a></li>
