--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <nav class="header-nav">
         <a class="logo link" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link link" href="index.html">Studio</a></li>
-          <li class="header-item"><a class="header-link link" href="portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+          <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
           <li class="header-item"><a class="header-link link" href="#" target="_blank">Contacts</a></li>
         </ul>
       </nav>
