--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
       <!--Our knowledges section-->
       <section class="knowledges-section section">
         <h2 class="knowledges-title title">What are we doing</h2>
-        <ul class="knowledges-list">
-          <li class="knowledges-list list">
+        <ul class="knowledges-list list">
+          <li class="knowledges-item">
             <img class="knowledges-img"
               src="./images/main/what-are-we-doing/what-are-we-doing-1.jpg"
               width="360"
               alt="computer"
             />
           </li>
-          <li class="knowledges-list list">
+          <li class="knowledges-item">
             <img class="knowledges-img"
               src="./images/main/what-are-we-doing/what-are-we-doing-2.jpg"
               width="360"
               alt="phone screen"
             />
           </li>
-          <li class="knowledges-list list">
+          <li class="knowledges-item">
             <img class="knowledges-img"
               src="./images/main/what-are-we-doing/what-are-we-doing-3.jpg"
               width="360"
@@ -153,7 +153,7 @@
 
     <!--page footer-->
     <footer class="footer">
-      <a class="logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
+      <a class="logo link" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
       <p class="footer-text ">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
