--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="header-list list">
           <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
           <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a class="header-link link" href="#" target="_blank">Contacts</a></li>
+          <li class="header-item"><a class="header-link link" href="" target="_blank">Contacts</a></li>
         </ul>
       </nav>
       <!--header's contacts-->
@@ -55,21 +55,21 @@
               perfect and creative solution.
             </p>
           </li>
-          <li class="benefits-item"></li>
+          <li class="benefits-item"> 
             <h3 class="benefits-subtitle subtitle">Punctuality</h3>
             <p class="benefits-text text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="benefits-item"></li>
+          <li class="benefits-item">
             <h3 class="benefits-subtitle subtitle">Diligence</h3>
             <p class="benefits-text text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="benefits-item"></li>
+          <li class="benefits-item">
             <h3 class="benefits-subtitle subtitle">Technologies</h3>
             <p class="benefits-text text">
               Design practice focused on digital experiences. We bring forth a
