--- a/portfolio.html
+++ b/portfolio.html
@@ -1,136 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio page</title>
-</head>
-<body>
-    <footer></footer>
-    <main>
-        <main class="main-portfolio">
-            <h2 hidden>
-              Increase the flow of customers and sales for your business with digital
-              marketing & growth solutions.
-            </h2>
-            <!--filter-->
-            <section class="section-filter section">
-              <ul class="filter-list list">
-                <li class="filter-item"><button type="button" class="filter-button button">All</button></li>
-                <li class="filter-item"><button type="button" class="filter-button button">Web Site</button></li>
-                <li class="filter-item"><button type="button" class="filter-button button">App</button></li>
-                <li class="filter-item"><button type="button" class="filter-button button">Design</button></li>
-                <li class="filter-item">
-                  <button type="button" class="filter-button button">Marketing</button>
-                </li>
-              </ul>
-            </section>
-      
-            <!--our portfolio-->
-            <section class="potrfolio-section section">
-              <!--row 1-->
-              <ul class="portfolio-list list">
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-1/img-1.jpg"
-                    alt="Banking App"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Banking App Interface Concept</h3>
-                  <p class="portfolio-text text">App</p>
-                </li>
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-1/img-2.jpg"
-                    alt="pay by phone"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Cashless Payment</h3>
-                  <p class="portfolio-text text">Marketing</p>
-                </li>
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-1/img-3.jpg"
-                    alt="laptop with phone"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Meditation App</h3>
-                  <p class="portfolio-text text">App</p>
-                </li>
-              </ul>
-              <!--row 2-->
-              <ul class="portfolio-list list">
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-2/img-1.jpg"
-                    alt="hands holding a car's wheel"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Taxi Service</h3>
-                  <p class="portfolio-text text">Marketing</p>
-                </li>
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-2/img-2.jpg"
-                    alt="phone's screen"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Screen Illustrations</h3>
-                  <p class="portfolio-text text">Design</p>
-                </li>
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-2/img-3.jpg"
-                    alt="woman is looking in a phone"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Online Courses</h3>
-                  <p class="portfolio-text text">Marketing</p>
-                </li>
-              </ul>
-              <!--row 3-->
-              <ul class="portfolio-list list">
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-3/img-1.jpg"
-                    alt="internet pages"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Instagram Stories Concept</h3>
-                  <p class="portfolio-text text">De textsign</p>
-                </li>
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-3/img-2.jpg"
-                    alt="woman is carrying groceries"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Organic Food</h3>
-                  <p class="portfolio-text text">We textb Site</p>
-                </li>
-                <li class="portfolio-item">
-                  <img class="portfolio-img"
-                    src="images/portfolio/row-3/img-3.jpg"
-                    alt="cup of coffee"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle subtitle">Fresh Coffee</h3>
-                  <p class="portfolio-text text">We textb Site</p>
-                </li>
-              </ul>
-            </section>
-          </main>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Solutions for rise your bussines" />
+    <title>Portfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--Custom styles-->
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body
+    class="body"
+    style="
+      font-family: 'Roboto', sans-serif;
+      color: #434455;
+      background-color: var(--main-background-color);
+    "
+  >
+    <!--page header-->
+    <header class="header section">
+      <!--header navigation-->
+      <nav class="header-nav">
+        <a class="logo link" href="./index.html"
+          >Web<span class="header-logo-studio">Studio</span></a
+        >
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <!--header's contacts-->
+      <address class="header-address">
+        <ul class="address-list list">
+          <li class="address-item text">
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item text">
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </header>
+
+    <main class="main-portfolio">
+      <h2 hidden>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </h2>
+      <!--filter-->
+      <section class="section-filter section">
+        <ul class="filter-list list">
+          <li class="filter-item">
+            <button type="button" class="filter-button button">All</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button button">Web Site</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button button">App</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button button">Design</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button button">
+              Marketing
+            </button>
+          </li>
+        </ul>
+      </section>
+
+      <!--our portfolio-->
+      <section class="potrfolio-section section">
+        <!--row 1-->
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-1/img-1.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">
+              Banking App Interface Concept
+            </h3>
+            <p class="portfolio-text text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-1/img-2.jpg"
+              alt="pay by phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">Cashless Payment</h3>
+            <p class="portfolio-text text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-1/img-3.jpg"
+              alt="laptop with phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">Meditation App</h3>
+            <p class="portfolio-text text">App</p>
+          </li>
+        </ul>
+        <!--row 2-->
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-2/img-1.jpg"
+              alt="hands holding a car's wheel"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">Taxi Service</h3>
+            <p class="portfolio-text text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-2/img-2.jpg"
+              alt="phone's screen"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text text">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-2/img-3.jpg"
+              alt="woman is looking in a phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">Online Courses</h3>
+            <p class="portfolio-text text">Marketing</p>
+          </li>
+        </ul>
+        <!--row 3-->
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-3/img-1.jpg"
+              alt="internet pages"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">
+              Instagram Stories Concept
+            </h3>
+            <p class="portfolio-text text">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-3/img-2.jpg"
+              alt="woman is carrying groceries"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">Organic Food</h3>
+            <p class="portfolio-text text">Web Site</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="images/portfolio/row-3/img-3.jpg"
+              alt="cup of coffee"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle subtitle">Fresh Coffee</h3>
+            <p class="portfolio-text text">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
-    
-</body>
+
+    <!--page footer-->
+    <footer class="footer">
+      <a class="logo link" href="./index.html"
+        >Web<span class="footer-logo-studio">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
