--- a/portfolio.html
+++ b/portfolio.html
@@ -89,44 +89,45 @@
         <!--row 1-->
         <ul class="portfolio-list list">
           <li>
-            <a href="" class="link"></a
-            ><img
-              class="portfolio-img"
-              src="./images/portfolio/row-1/img-1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle subtitle">
-              Banking App Interface Concept
-            </h2>
-            <p class="portfolio-text text">App</p>
+            <a href="" class="link"
+              ><img
+                class="portfolio-img"
+                src="./images/portfolio/row-1/img-1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle subtitle">
+                Banking App Interface Concept
+              </h2>
+              <p class="portfolio-text text">App</p>
+            </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-1/img-2.jpg"
+                src="./images/portfolio/row-1/img-2.jpg"
                 alt="pay by phone"
                 width="360"
                 height="300"
               />
+              <h2 class="portfolio-subtitle subtitle">Cashless Payment</h2>
+              <p class="portfolio-text text">Marketing</p>
             </a>
-            <h2 class="portfolio-subtitle subtitle">Cashless Payment</h2>
-            <p class="portfolio-text text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-1/img-3.jpg"
+                src="./images/portfolio/row-1/img-3.jpg"
                 alt="laptop with phone"
                 width="360"
                 height="300"
               />
+              <h2 class="portfolio-subtitle subtitle">Meditation App</h2>
+              <p class="portfolio-text text">App</p>
             </a>
-            <h2 class="portfolio-subtitle subtitle">Meditation App</h2>
-            <p class="portfolio-text text">App</p>
           </li>
         </ul>
         <!--row 2-->
@@ -135,40 +136,40 @@
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-2/img-1.jpg"
+                src="./images/portfolio/row-2/img-1.jpg"
                 alt="hands holding a car's wheel"
                 width="360"
                 height="300"
               />
+              <h2 class="portfolio-subtitle subtitle">Taxi Service</h2>
+              <p class="portfolio-text text">Marketing</p>
             </a>
-            <h2 class="portfolio-subtitle subtitle">Taxi Service</h2>
-            <p class="portfolio-text text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-2/img-2.jpg"
+                src="./images/portfolio/row-2/img-2.jpg"
                 alt="phone's screen"
                 width="360"
                 height="300"
               />
+              <h3 class="portfolio-subtitle subtitle">Screen Illustrations</h3>
+              <p class="portfolio-text text">Design</p>
             </a>
-            <h3 class="portfolio-subtitle subtitle">Screen Illustrations</h3>
-            <p class="portfolio-text text">Design</p>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-2/img-3.jpg"
+                src="./images/portfolio/row-2/img-3.jpg"
                 alt="woman is looking in a phone"
                 width="360"
                 height="300"
               />
+              <h2 class="portfolio-subtitle subtitle">Online Courses</h2>
+              <p class="portfolio-text text">Marketing</p>
             </a>
-            <h2 class="portfolio-subtitle subtitle">Online Courses</h2>
-            <p class="portfolio-text text">Marketing</p>
           </li>
         </ul>
         <!--row 3-->
@@ -177,42 +178,42 @@
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-3/img-1.jpg"
+                src="./images/portfolio/row-3/img-1.jpg"
                 alt="internet pages"
                 width="360"
                 height="300"
               />
+              <h2 class="portfolio-subtitle subtitle">
+                Instagram Stories Concept
+              </h2>
+              <p class="portfolio-text text">Design</p>
             </a>
-            <h2 class="portfolio-subtitle subtitle">
-              Instagram Stories Concept
-            </h2>
-            <p class="portfolio-text text">Design</p>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-3/img-2.jpg"
+                src="./images/portfolio/row-3/img-2.jpg"
                 alt="woman is carrying groceries"
                 width="360"
                 height="300"
               />
+              <h2 class="portfolio-subtitle subtitle">Organic Food</h2>
+              <p class="portfolio-text text">Web Site</p>
             </a>
-            <h2 class="portfolio-subtitle subtitle">Organic Food</h2>
-            <p class="portfolio-text text">Web Site</p>
           </li>
           <li class="portfolio-item">
             <a href="" class="link">
               <img
                 class="portfolio-img"
-                src="images/portfolio/row-3/img-3.jpg"
+                src="./images/portfolio/row-3/img-3.jpg"
                 alt="cup of coffee"
                 width="360"
                 height="300"
               />
+              <h2 class="portfolio-subtitle subtitle">Fresh Coffee</h2>
+              <p class="portfolio-text text">Web Site</p>
             </a>
-            <h2 class="portfolio-subtitle subtitle">Fresh Coffee</h2>
-            <p class="portfolio-text text">Web Site</p>
           </li>
         </ul>
       </section>
